steak set html start q qqqq quit dfsa

--- a/menu-beverage.html
+++ b/menu-beverage.html
@@ -6,15 +6,16 @@
 
         <link rel="icon" href="./img/favicon.png" />
         <link rel="apple-touch-icon" href="/img/favicon.png" />
-        <title>파스타&샐러드 - 매드포갈릭</title>
+        <title>음료&디저트 - 매드포갈릭</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/menu.css" />
         <link rel="stylesheet" href="./css/beverage.css" />
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./js/jquery-3.7.1.min.js"></script>
         <script src="./js/common.js"></script>
         <script src="./js/menu.js"></script>
