--- a/menu-pasta&rice.html
+++ b/menu-pasta&rice.html
@@ -8,14 +8,14 @@
         <link rel="apple-touch-icon" href="/img/favicon.png" />
         <title>파스타&샐러드 - 매드포갈릭</title>
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/menu.css" />
         <link rel="stylesheet" href="./css/pasta&rice.css" />
-        <!-- 파스타뉴 두개점유하는css -->
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./js/jquery-3.7.1.min.js"></script>
         <script src="./js/common.js"></script>
         <script src="./js/menu.js"></script>
@@ -227,7 +227,7 @@
                                     <div class="menu-text">
                                         <strong>갈릭페뇨 파스타</strong>
                                         <p>Garlicpeno Pasta</p>
-                                        <p>27,800원</p>
+                                        <p>26,800원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
@@ -249,7 +249,7 @@
                                     <div class="menu-text">
                                         <strong>트리플 갈릭 파스타</strong>
                                         <p>Triple Garlic Pasta</p>
-                                        <p>27,800원</p>
+                                        <p>26,800원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
@@ -271,7 +271,7 @@
                                     <div class="menu-text">
                                         <strong>마늘 까르보나라</strong>
                                         <p>Garlic Carbonara</p>
-                                        <p>27,800원</p>
+                                        <p>26,800원</p>
                                     </div>
                                 </div>
                                 <div class="menu-info">
@@ -289,7 +289,7 @@
                                     <div class="menu-text">
                                         <strong>매드 페스카토레</strong>
                                         <p>Mad Pescatore</p>
-                                        <p>27,800원</p>
+                                        <p>26,800원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
@@ -325,16 +325,16 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/menu-pasta-ml.png" alt="메드 라자냐" />
+                                <img src="./img/menu-pasta-ml.png" alt="매드 라자냐" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong>메드 라자냐</strong>
+                                        <strong>매드 라자냐</strong>
                                         <p>Mad Lasagna</p>
                                         <p>28,400원</p>
                                     </div>
                                 </div>
                                 <div class="menu-info">
-                                    <strong>메드 라자냐</strong>
+                                    <strong>매드 라자냐</strong>
                                     <p>Mad Lasagna</p>
                                     <p>매드만의 갈릭 크림치즈와 특제 라구 소스로 더욱 특별해진 클래식 라자냐</p>
                                     <span><i class="hidden">자세히보기</i></span>
@@ -355,7 +355,7 @@
                                     <div class="menu-text">
                                         <strong>마늘 시즐링 라이스</strong>
                                         <p>Garlic Sizzling Rice</p>
-                                        <p>28,800원</p>
+                                        <p>27,800원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
@@ -377,7 +377,7 @@
                                     <div class="menu-text">
                                         <strong>소고기 & K-라이스</strong>
                                         <p>Beef & K-Rice</p>
-                                        <p>29,400원</p>
+                                        <p>28,400원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
