--- a/menu-steak.html
+++ b/menu-steak.html
@@ -6,15 +6,16 @@
 
         <link rel="icon" href="./img/favicon.png" />
         <link rel="apple-touch-icon" href="/img/favicon.png" />
-        <title>파스타&샐러드 - 매드포갈릭</title>
+        <title>스테이크 - 매드포갈릭</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/menu.css" />
         <link rel="stylesheet" href="./css/steak.css" />
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./js/jquery-3.7.1.min.js"></script>
         <script src="./js/common.js"></script>
         <script src="./js/menu.js"></script>
@@ -168,12 +169,12 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/menu-steak-mgr.png" alt="매드 글레이즈드 립 런치세트" />
+                                <img src="./img/menu-steak-mgr.png" alt="매드 글레이즈드 립" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong>매드 글레이즈드 립 런치세트</strong>
+                                        <strong>매드 글레이즈드 립</strong>
                                         <p>Mad Glazed Rib</p>
-                                        <p>35,900원</p>
+                                        <p>34,900원</p>
                                     </div>
                                 </div>
                                 <div class="menu-info">
@@ -186,12 +187,12 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/menu-steak-gr.png" alt="마늘 립아이 스테이크 런치세트" />
+                                <img src="./img/menu-steak-gr.png" alt="마늘 립아이 스테이크" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong>마늘 립아이 스테이크 런치세트</strong>
+                                        <strong>마늘 립아이 스테이크</strong>
                                         <p>Garlic Ribeye Steak</p>
-                                        <p>63,000원</p>
+                                        <p>62,000원</p>
                                     </div>
                                 </div>
                                 <div class="menu-info">
@@ -207,12 +208,12 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/menu-steak-mcf.png" alt="매드 크림 필렛 스테이크 런치세트" />
+                                <img src="./img/menu-steak-mcf.png" alt="매드 크림 필렛 스테이크" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong>매드 크림 필렛 스테이크 런치세트</strong>
+                                        <strong>매드 크림 필렛 스테이크</strong>
                                         <p>Mad Cream Filet Steak</p>
-                                        <p>63,000원</p>
+                                        <p>62,000원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
@@ -230,12 +231,12 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/menu-steak-fs.png" alt="포레스트 스트립 스테이크 런치세트" />
+                                <img src="./img/menu-steak-fs.png" alt="포레스트 스트립 스테이크" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong>포레스트 스트립 스테이크 런치세트</strong>
+                                        <strong>포레스트 스트립 스테이크</strong>
                                         <p>Forest Strip Steak</p>
-                                        <p>63,000원</p>
+                                        <p>62,000원</p>
                                     </div>
                                     <div class="menu-badge">
                                         <strong><img src="./img/badge-hot.svg" alt="HOT" /></strong>
